# CppPrimer2

./: .gitignore  CMakeLists.txt
Exercises/Chapter_10/: Ex10_1.cpp  Ex10_12.cpp  Ex10_13.cpp  Ex10_14.cpp  Ex10_16.cpp  Ex10_21.cpp  Ex10_22.cpp  Ex10_24.cpp  Ex10_27.cpp  Ex10_28.cpp  Ex10_29.cpp  Ex10_3.cpp  Ex10_30.cpp  Ex10_32.cpp  Ex10_33.cpp  Ex10_34.cpp  Ex10_36.cpp  Ex10_37.cpp  Ex10_42.cpp  Ex10_6.cpp  Ex10_9.cpp  books_data.txt  even.txt  numbers.txt  odd.txt  text.txt  words.txt  words_duplicates.txt
Exercises/Chapter_11/: Ex11_11.cpp  Ex11_12.cpp  Ex11_16.cpp  Ex11_17.cpp  Ex11_18.cpp  Ex11_20.cpp  Ex11_23.cpp  Ex11_28.cpp  Ex11_3.cpp  Ex11_4.cpp  Ex11_7.cpp  Ex11_9.cpp  chemical_element.cpp  chemical_element.h  families_container.cpp  families_container.h  state_of_matter.h  string_utils.cpp  string_utils.h  strings_numbers.txt  text.txt  text2.txt
Exercises/Chapter_8/: Ex8_1.cpp  Ex8_10.cpp  Ex8_13.cpp  Ex8_4.cpp  Ex8_6.cpp  data.txt  out.txt  sales_data.cpp  sales_data.h  text.txt
Exercises/Chapter_9/: Ex9_15.cpp  Ex9_18.cpp  Ex9_2.cpp  Ex9_20.cpp  Ex9_22.cpp  Ex9_26.cpp  Ex9_27.cpp  Ex9_28.cpp  Ex9_31.cpp  Ex9_33.cpp  Ex9_34.cpp  Ex9_38.cpp  Ex9_40.cpp  Ex9_50.cpp  Ex9_51.cpp  Ex9_52.cpp  date.cpp  date.h  numbers.txt  words_1048.txt  words_256.txt  words_512.txt
