cmake_minimum_required(VERSION 3.30)
project(CppPrimer2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ex8_1 Exercises/Chapter_8/Ex8_1.cpp)
add_executable(Ex8_4 Exercises/Chapter_8/Ex8_4.cpp)
add_executable(Ex8_6 Exercises/Chapter_8/sales_data.cpp Exercises/Chapter_8/sales_data.h
        Exercises/Chapter_8/Ex8_6.cpp)
add_executable(Ex8_10 Exercises/Chapter_8/Ex8_10.cpp)
add_executable(Ex8_13 Exercises/Chapter_8/Ex8_13.cpp)
add_executable(Ex9_2 Exercises/Chapter_9/Ex9_2.cpp)
add_executable(Ex9_15 Exercises/Chapter_9/Ex9_15.cpp)
add_executable(Ex9_18 Exercises/Chapter_9/Ex9_18.cpp)
add_executable(Ex9_20 Exercises/Chapter_9/Ex9_20.cpp)
add_executable(Ex9_22 Exercises/Chapter_9/Ex9_22.cpp)
add_executable(Ex9_26 Exercises/Chapter_9/Ex9_26.cpp)
add_executable(Ex9_27 Exercises/Chapter_9/Ex9_27.cpp)
add_executable(Ex9_28 Exercises/Chapter_9/Ex9_28.cpp)
add_executable(Ex9_31 Exercises/Chapter_9/Ex9_31.cpp)
add_executable(Ex9_33 Exercises/Chapter_9/Ex9_33.cpp)
add_executable(Ex9_34 Exercises/Chapter_9/Ex9_34.cpp)
add_executable(Ex9_38 Exercises/Chapter_9/Ex9_38.cpp)
add_executable(Ex9_40 Exercises/Chapter_9/Ex9_40.cpp)
add_executable(Ex9_50 Exercises/Chapter_9/Ex9_50.cpp)
