cmake_minimum_required(VERSION 3.30)
project(CppPrimer2)

set(CMAKE_CXX_STANDARD 23)

add_executable(Ex8_1 Exercises/Chapter_8/Ex8_1.cpp)
add_executable(Ex8_4 Exercises/Chapter_8/Ex8_4.cpp)
add_executable(Ex8_6 Exercises/Chapter_8/sales_data.cpp Exercises/Chapter_8/sales_data.h
        Exercises/Chapter_8/Ex8_6.cpp)
add_executable(Ex8_10 Exercises/Chapter_8/Ex8_10.cpp)
add_executable(Ex8_13 Exercises/Chapter_8/Ex8_13.cpp)
add_executable(Ex9_2 Exercises/Chapter_9/Ex9_2.cpp)
add_executable(Ex9_15 Exercises/Chapter_9/Ex9_15.cpp)
add_executable(Ex9_18 Exercises/Chapter_9/Ex9_18.cpp)
add_executable(Ex9_20 Exercises/Chapter_9/Ex9_20.cpp)
add_executable(Ex9_22 Exercises/Chapter_9/Ex9_22.cpp)
add_executable(Ex9_26 Exercises/Chapter_9/Ex9_26.cpp)
add_executable(Ex9_27 Exercises/Chapter_9/Ex9_27.cpp)
add_executable(Ex9_28 Exercises/Chapter_9/Ex9_28.cpp)
add_executable(Ex9_31 Exercises/Chapter_9/Ex9_31.cpp)
add_executable(Ex9_33 Exercises/Chapter_9/Ex9_33.cpp)
add_executable(Ex9_34 Exercises/Chapter_9/Ex9_34.cpp)
add_executable(Ex9_38 Exercises/Chapter_9/Ex9_38.cpp)
add_executable(Ex9_40 Exercises/Chapter_9/Ex9_40.cpp)
add_executable(Ex9_50 Exercises/Chapter_9/Ex9_50.cpp)
add_executable(Ex9_51 Exercises/Chapter_9/Ex9_51.cpp
        Exercises/Chapter_9/date.cpp
        Exercises/Chapter_9/date.h)
add_executable(Ex9_52 Exercises/Chapter_9/Ex9_52.cpp)
add_executable(Ex10_1 Exercises/Chapter_10/Ex10_1.cpp)
add_executable(Ex10_3 Exercises/Chapter_10/Ex10_3.cpp)
add_executable(Ex10_6 Exercises/Chapter_10/Ex10_6.cpp)
add_executable(Ex10_9 Exercises/Chapter_10/Ex10_9.cpp)
add_executable(Ex10_12 Exercises/Chapter_10/Ex10_12.cpp
        Exercises/Chapter_8/sales_data.h
        Exercises/Chapter_8/sales_data.cpp)
add_executable(Ex10_13 Exercises/Chapter_10/Ex10_13.cpp)
add_executable(Ex10_14 Exercises/Chapter_10/Ex10_14.cpp)
add_executable(Ex10_16 Exercises/Chapter_10/Ex10_16.cpp)
add_executable(Ex10_21 Exercises/Chapter_10/Ex10_21.cpp)
add_executable(Ex10_22 Exercises/Chapter_10/Ex10_22.cpp)
add_executable(Ex10_24 Exercises/Chapter_10/Ex10_24.cpp)
add_executable(Ex10_27 Exercises/Chapter_10/Ex10_27.cpp)
add_executable(Ex10_28 Exercises/Chapter_10/Ex10_28.cpp)
add_executable(Ex10_29 Exercises/Chapter_10/Ex10_29.cpp)
add_executable(Ex10_30 Exercises/Chapter_10/Ex10_30.cpp)
add_executable(Ex10_32 Exercises/Chapter_10/Sales_item.h
        Exercises/Chapter_10/Ex10_32.cpp
        Exercises/Chapter_10/Version_test.h)
add_executable(Ex10_33 Exercises/Chapter_10/Ex10_33.cpp)
add_executable(Ex10_34 Exercises/Chapter_10/Ex10_34.cpp)
add_executable(Ex10_36 Exercises/Chapter_10/Ex10_36.cpp)
add_executable(Ex10_37 Exercises/Chapter_10/Ex10_37.cpp)
add_executable(Ex10_42 Exercises/Chapter_10/Ex10_42.cpp)
add_executable(Ex11_3 Exercises/Chapter_11/Ex11_3.cpp)
add_executable(Ex11_4 Exercises/Chapter_11/string_utils.h
        Exercises/Chapter_11/Ex11_4.cpp
        Exercises/Chapter_11/string_utils.cpp)
add_executable(Ex11_7 Exercises/Chapter_11/Ex11_7.cpp
        Exercises/Chapter_11/families_container.cpp
        Exercises/Chapter_11/families_container.h)
add_executable(Ex11_9 Exercises/Chapter_11/Ex11_9.cpp)
add_executable(Ex11_11 Exercises/Chapter_11/chemical_element.cpp Exercises/Chapter_11/chemical_element.h
        Exercises/Chapter_11/state_of_matter.h
        Exercises/Chapter_11/Ex11_11.cpp)
